--- a/strings_and_facors.Rmd
+++ b/strings_and_facors.Rmd
@@ -5,3 +5,124 @@ date: "2023-10-17"
 output: github_document
 ---
 
+```{r}
+library(rvest)
+library(p8105.datasets)
+library(tidyverse)
+```
+
+## Strings and manipulations
+
+
+
+```{r}
+string_vec = c("my", "name", "is", "xue")
+
+str_detect(string_vec, "xue")
+str_detect(string_vec, "e")
+str_detect(string_vec, "Xue")
+
+str_replace(string_vec, "xue", "Xue Zhang")
+```
+
+
+```{r}
+string_vec = c(
+  "i think we all rule for participating",
+  "i think i have been caught",
+  "i think this will be quite fun actually",
+  "it will be fun, i think"
+  )
+
+str_detect(string_vec, "i think")
+
+str_detect(string_vec, "^i think") # for the start from "i think"
+
+str_detect(string_vec, "i think$") # for the end with "i tthink"
+```
+
+
+```{r}
+string_vec = c(
+  "Time for a Pumpkin Spice Latte!",
+  "went to the #pumpkinpatch last weekend",
+  "Pumpkin Pie is obviously the best pie",
+  "SMASHING PUMPKINS -- LIVE IN CONCERT!!"
+  )
+
+str_detect(string_vec,"Pumpkin")
+
+# either capital or lower case
+str_detect(string_vec,"[Pp]umpkin")
+
+```
+
+
+
+
+
+```{r}
+string_vec = c(
+  '7th inning stretch',
+  '1st half soon to begin. Texas won the toss.',
+  'she is 5 feet 4 inches tall',
+  '3AM - cant sleep :('
+  )
+
+# anything matches a number 
+str_detect(string_vec, "[0-9]")
+
+# anything starts with a number
+str_detect(string_vec, "^[0-9]")
+
+# anything starts with a number and a lower character
+str_detect(string_vec, "^[0-9][-z]")
+
+str_detect(string_vec, "^[0-9][a-zA-Z]")
+
+```
+
+
+
+```{r}
+string_vec = c(
+  'Its 7:11 in the evening',
+  'want to go to 7-11?',
+  'my flight is AA711',
+  'NetBios: scanning ip 203.167.114.66'
+  )
+
+
+# "." between "7 and 11" is mean anything can be matched
+str_detect(string_vec, "7.11")
+
+```
+
+
+
+
+```{r}
+string_vec = c(
+  'The CI is [2, 5]',
+  ':-]',
+  ':-[',
+  'I found the answer on pages [6-7]'
+  )
+
+
+# find anything the brackets exist
+str_detect(string_vec, "\\[")
+```
+
+
+## Factors
+
+```{r}
+
+```
+
+
+```{r}
+
+
+```
