--- a/strings_and_facors.Rmd
+++ b/strings_and_facors.Rmd
@@ -197,7 +197,56 @@ marj_df |>
 ```
 
 
-```{r}
 
+## NYC Restaurant Inspectitons
+
+
+
+```{r}
+rest_inspec |>
+  count(boro, grade) |>
+  pivot_wider(
+    names_from = grade,
+    values_from = n
+  ) |>
+  knitr::kable()
 ```
 
+
+
+```{r}
+inspection_df =
+  rest_inspec |>
+  filter(grade %in% c("A", "B", "C"), boro != "Missing") |>
+  mutate(
+    boro = str_to_title(boro),
+    dba = str_to_upper(dba))
+```
+
+Pizza places
+
+```{r}
+inspection_df |>
+  filter(str_detect(dba, "PIZZA")) |>
+  count(boro)
+```
+
+```{r}
+inspection_df |>
+  filter(str_detect(dba, "PIZZA")) |>
+  mutate(boro = fct_infreq(boro)) |>
+  ggplot(aes(x = boro, fill = grade)) +
+  geom_bar()
+```
+
+
+
+```{r}
+inspection_df |>
+  filter(str_detect(dba, "PIZZA")) |>
+  mutate(
+    boro = fct_infreq(boro),
+    boro = fct_recode(boro, "The City" = "Manhattan")) |>
+  ggplot(aes(x = boro, fill = grade)) +
+  geom_bar()
+```
